# neurodamus

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE.txt  README.rst  _debug.py  authors.txt  envsetup.sh  init.py  lib  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: build_docs.yml  build_test_wheels.yml  lint_check.yml  publish_wheels.yml  simulation_test.yml
Docker/: Dockerfile  README.md
_benchmarks/: init.py  out.lprof  synstats.py  timeit.py
_benchmarks/opti_configure_0.2.2/: line_stats.0.txt  line_stats.txt
_lib/: AMPANMDAHelper.hoc  CellDistributor.hoc  CompartmentMapping.hoc  ConfigParser.hoc  Connection.hoc  DetAMPANMDAHelper.hoc  DetGABAABHelper.hoc  EStim.hoc  GapJunctionManager.hoc  GluSynapseHelper.hoc  METype.hoc  METypeInfo.hoc  Map.hoc  ModificationManager.hoc  Node.hoc  RNGSettings.hoc  Report.hoc  ShowProgress.hoc  SynapseReplay.hoc  SynapseRuleManager.hoc  Target.hoc  _debug.hoc  fileUtils.hoc  init.hoc  mcomplex.hoc  neurodamus.hoc  perfUtils.hoc  timeit.hoc
ci/: build_ndcore.sh  python_build_sdist.sh
core/hoc/: Cell.hoc  CompartmentMapping.hoc  ConfigParser.hoc  EStim.hoc  ElectrodeManager.hoc  Map.hoc  MorphIO.hoc  RNGSettings.hoc  Report.hoc  SerializedSections.hoc  ShowProgress.hoc  SimSettings.hoc  StimulusManager.hoc  SynReaders.hoc  TDistFunc.hoc  TPointList.hoc  TStim.hoc  TType.hoc  Target.hoc  TargetManager.hoc  TargetParser.hoc  defvar.hoc  fileUtils.hoc  mapping.py  morphio_wrapper.py  neurodamus.hoc
core/mod/: ALU.mod  CoreConfig.mod  CoreNEURONArtificialCell.mod  HDF5reader.mod  SonataReportHelper.mod  SonataReports.mod  SpikeWriter.mod  SynapseReader.mod  VecStim.mod  coreneuron_modlist.txt  lookupTableV2.mod  netstim_inhpoisson.mod  utility.mod
core/python/: mapping.py  morphio_wrapper.py
docker/: Dockerfile  README.md  build_neurodamus.sh
docs/: architecture.rst  authors.rst  changes.rst  conf.py  development.rst  examples.rst  index.rst  memory_load_balance.rst  online-lfp.rst  overview.rst  sonata-faq.rst  sonata-simulation.rst
docs/_static/: custom.css
docs/api/: modules.rst  neurodamus.core.rst  neurodamus.io.rst  neurodamus.rst  neurodamus.utils.rst
examples/: Untitled.ipynb  composed_signal.py  create_cell.py  load_cell.py  morph.ipynb  morph.py  neuron_first_steps.py  neuron_tut1.py  neuron_tut2.py  neuron_tut_estim.py  phys.ipynb  phys.py  signal.py  test_neurodamus.py  test_synapse.py
mods.tmp/: ALU.mod  ASCIIrecord.mod  BinReportHelper.mod  BinReports.mod  CoreConfig.mod  GluSynapse.mod  GluSynapse_TM.mod  HDF5reader.mod  HDF5record.mod  MemUsage.mod  ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod  ProfileHelper.mod  SynapseReader.mod  memoryaccess.mod  utility.mod
neurodamus/: ._stimulus_manager.py  __init__.py  _neurodamus.py  _neuron.py  cell.py  cell_distributor.py  cell_readers.py  commands.py  connection.py  connection_manager.py  definitions.py  gap_junction.py  gapjunctions.py  gj_user_corrections.py  hocify.py  lfp_manager.py  managers.py  mechanisms.py  metype.py  modification_manager.py  morphio_wrapper.py  neuromodulation_manager.py  ngv.py  node.py  nrn.py  point_neuron.py  random.py  replay.py  report.py  stimuli.py  stimulus_manager.py  synapse_reader.py  synapses.py  target_manager.py  utils.py
neurodamus/core/: ._stimuli.py  __init__.py  _engine.py  _mpi.py  _neurodamus.py  _neuron.py  _shmutils.py  _utils.py  cell.py  configuration.py  coreneuron_configuration.py  definitions.py  mechanisms.py  nodeset.py  random.py  stimuli.py  synapses.py
neurodamus/io/: cell_readers.py  config_parser.py  merge_read_extract.py  sonata_config.py  synapse_reader.py
neurodamus/lib/: configparser.py  mcomplex.py
neurodamus/utils/: __init__.py  cli.py  compat.py  logging.py  memory.py  multimap.py  progressbar.py  pyutils.py  timeit.py
pytest/: test_bau.py
tests/: conftest.py  requirements.txt  run_test.sh  slurm-311533.out  slurm-311616.out  test_blueconfig_parser.py  test_cell.py  test_cli_opts.py  test_conn_manager.py  test_connection.py  test_coords.py  test_core_config.py  test_detailed_point_neuron_conn.py  test_dry_run.py  test_electrodes.py  test_error_handling.py  test_fair_chunk.py  test_lfp.py  test_loadbalance.py  test_modification.py  test_multicycle_runs.py  test_neuromodulation.py  test_neuron.py  test_ngv.py  test_nodeset.py  test_nodeset_target.py  test_parser.py  test_patched_delays.py  test_plugin.py  test_pyutils.py  test_replay_manager.py  test_simulation.bash  test_simulation.py  test_skeleton.py  test_sonata_config.py  test_sonata_output.py  test_sonata_properties.py  test_stimuli.py  test_synapses.py  test_target_intersection.py
tests/data/: BlueConfig.yaml
tests/integration-e2e/: conftest.py  test_cli_opts.py  test_connection.py  test_coreneuron_directmode.py  test_crashmode.py  test_dry_run_worflow.py  test_dry_run_workflow.py  test_error_handling.py  test_loadbalance.py  test_multicycle_runs.py  test_plugin.py  test_reports.py  test_synapse_reader.py
tools/: rebalance-corenrn-data.py  rebalance-stats.py  toolbox.py
x86_64/: ALU.c  ASCIIrecord.c  BinReportHelper.c  BinReports.c  CoreConfig.c  DetAMPANMDA.c  DetGABAAB.c  GluSynapse.c  GluSynapse_TM.c  HDF5reader.c  HDF5record.c  MemUsage.c  ProbAMPANMDA_EMS.c  ProbGABAAB_EMS.c  ProfileHelper.c  SonataReportHelper.c  SonataReports.c  SpikeWriter.c  SynapseReader.c  TTXDynamicsSwitch.c  VecStim.c  gap.c  lookupTableV2.c  makemod2c_inc  memoryaccess.c  mod_func.c  netstim_inhpoisson.c  special  utility.c
(+214 files in other folders)
