[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name="neurodamus"
authors = [
    {name = "Blue Brain Project, EPFL"},
]
description = "A BBP Simulation Control application for NEURON"
license = {file = "LICENSE.txt"}
readme = "README.rst"
dynamic = ["version"]
dependencies = [
    "h5py",
    "docopt",
    "libsonata",
    "psutil"
]
requires-python=">=3.9"

[project.optional-dependencies]
plotting=['matplotlib'] # only for Neurodamus HL API
full=['scipy', 'morphio', 'NEURON']

[project.scripts]
neurodamus = "neurodamus.commands:neurodamus"
hocify = "neurodamus.commands:hocify"

[project.urls]
Homepage = "https://github.com/BlueBrain/neurodamus"
Repository = "https://github.com/BlueBrain/neurodamus.git"
Tracker = "https://github.com/BlueBrain/neurodamus/issues"

[tool.hatch.build.targets.sdist]
only-include = [
    "neurodamus",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = "--verbose"
markers = ["slow: marks tests as slow"]

[tool.flake8]
exclude = [".*", "__pycache__", ".eggs", "*.egg", "build", "dist", "docs", "venv", "*.egg-info", "_benchmarks", "core"]
extend-ignore = ["E127", "E221", "E226", "E701", "W503", "W504", "E731", "PT001", "PT023"]
max-line-length = 100
