[metadata]
name = neurodamus
summary = Blue Brain Project - Neurodamus simulation control, now in Python
author = BlueBrain HPC
author-email = bbp-ou-hpc@epfl.ch
license = Blue Brain Project License
maintainer = Fernando Pereira
home-page = https://bbpteam.epfl.ch/project/spaces/display/BGLIB/Neurodamus
description-file = README.rst

classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[tool:pytest]
addopts = tests -s --verbose
markers = slow: marks tests as slow

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = .tox, venv, docs, .git, __pycache__, .eggs, *.egg, penv
ignore = E127, E221, E226, E701, W503, W504, E731
max-line-length = 100

