[metadata]
name = neurodamus-py
summary = Blue Brain Project - Neurodamus simulation control, now in Python
description_file = README.rst
author = BlueBrain HPC
author_email = bbp-ou-hpc@epfl.ch
license = Blue Brain Project License
url = https://bbpteam.epfl.ch/project/spaces/display/BGLIB/Neurodamus
project_urls =
    Source = ssh://bbpcode.epfl.ch/sim/neurodamus-py
maintainer = Fernando Pereira

classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Scientific/Engineering
    License :: Other/Proprietary License

[tool:pytest]
addopts = tests --verbose
markers = slow: marks tests as slow

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = .*, __pycache__, .eggs, *.egg, build, dist, docs, venv, *.egg-info, _benchmarks, core
ignore = E127, E221, E226, E701, W503, W504, E731
max-line-length = 100
