[metadata]
name = neurodamus
summary = Blue Brain Project - Neurodamus simulation control, now in Python
long_description = file: README.rst
author = Blue Brain Project, EPFL
license = Apache 2.0
url = https://bbpteam.epfl.ch/project/spaces/display/BGLIB/Neurodamus
project_urls =
    Source = https://bbpgitlab.epfl.ch/hpc/sim/neurodamus-py.git
    Tracker = https://bbpgitlab.epfl.ch/hpc/sim/neurodamus-py
maintainer = Fernando Pereira

classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Scientific/Engineering
    License :: Other/Proprietary License

[tool:pytest]
addopts = --verbose
markers = slow: marks tests as slow

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = .*, __pycache__, .eggs, *.egg, build, dist, docs, venv, *.egg-info, _benchmarks, core
ignore = E127, E221, E226, E701, W503, W504, E731, PT001, PT023
max-line-length = 100
# max-complexity = 12
